added new test case
